<resources>
    <string name="app_name">PagaBus2v</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="inicio">Inicio</string>
    <string name="cuenta">Cuenta</string>
    <string name="buscar_ruta">Buscar Ruta</string>
    <string name="saldo">Saldo</string>
    <string name="descuento">Descuento</string>
    <string name="sobre_nosotros">Sobre Nosotros</string>

    <string name="inicio_de_sesion">Inicio De Sesion</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="no_tienes_cuanta">¿No   tienes   cuenta?</string>
    <string name="correo">Correo</string>
    <string name="contrase_a">Contraseña</string>
    <string name="registrame">Registrame</string>
    <string name="TyCacepto">He leido y acepto los terminos y condiciones de uso</string>
    <string name="acepto">Acepto los Teminos y Condiciones de uso</string>

    <string name="google">GOOGLE</string>
    <string name="facebook">FACEBOOK</string>
    <string name="BienvenidaLogin">Transportandote con Facilidad</string>
    <string name="passwordOlvidada">¿Olvidaste tu contraseña?</string>
    <string name="leidoAcepto">He leido y acepto</string>
    <string name="terminosYcondiciones">los terminos y condiciones</string>
    <string name="TyC">Términos y Condiciones de Uso de PAGABUS

Por favor, lee atentamente estos términos y condiciones antes de utilizar la aplicación móvil PAGABUS (en adelante, la "Aplicación"). Al utilizar la Aplicación, aceptas cumplir y quedar sujeto a estos términos y condiciones. Si no estás de acuerdo con alguno de estos términos, no utilices la Aplicación.

Aceptación de los Términos de Uso
Al utilizar la Aplicación, aceptas estos términos de uso y te comprometes a cumplir con ellos. Si no estás de acuerdo con estos términos, no utilices la Aplicación.

Uso de la Aplicación
a. PAGABUS ofrece un servicio de pagos fáciles y rápidos para el transporte público, así como un servicio de GPS y seguimiento de rutas del transporte público para facilitar a los usuarios su movilidad y el pago de este servicio.

b. No debes utilizar la Aplicación de ninguna manera que pueda causar daño a la aplicación, a terceros o que viole la ley aplicable.

c. Nos reservamos el derecho de modificar, suspender o descontinuar la Aplicación en cualquier momento, sin previo aviso.

Propiedad Intelectual
a. La Aplicación y todo su contenido son propiedad de PAGABUS o de sus proveedores y están protegidos por las leyes de propiedad intelectual aplicables.

b. No se te otorga ningún derecho de propiedad sobre la Aplicación o su contenido, excepto por el derecho limitado de utilizar la Aplicación de acuerdo con estos términos y condiciones.

Privacidad
a. Nos comprometemos a proteger tu privacidad. Nuestra Política de Privacidad explica cómo recopilamos, utilizamos y protegemos tu información personal. Al utilizar la Aplicación, aceptas nuestra Política de Privacidad.

Limitación de Responsabilidad
a. En la medida máxima permitida por la ley aplicable, en ningún caso PAGABUS será responsable por daños indirectos, incidentales, especiales o consecuentes que surjan del uso o la imposibilidad de utilizar la Aplicación.

b. PAGABUS no será responsable por ningún fallo o retraso en el cumplimiento de sus obligaciones si dicho fallo o retraso es causado por eventos fuera de nuestro control razonable.

Modificaciones de los Términos y Condiciones
Nos reservamos el derecho de modificar estos términos y condiciones en cualquier momento. Las modificaciones entrarán en vigencia inmediatamente después de su publicación en la Aplicación. Te recomendamos revisar periódicamente estos términos y condiciones para estar al tanto de cualquier cambio.

Al utilizar la Aplicación, aceptas estar sujeto a estos términos y condiciones, incluyendo cualquier modificación que realicemos. Si no estás de acuerdo con estos términos y condiciones o con cualquier modificación que realicemos, tu único recurso es dejar de utilizar la Aplicación.

Si tienes alguna pregunta sobre estos términos y condiciones, contáctanos en PagaBus@PagaBus.com.</string>
    <string name="CerrarSesion">Cerrar Sesión</string>
</resources>