<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".MainActivity"
android:background="@color/white">


    <ImageView
        android:id="@+id/LogoLogin"
        android:layout_width="194dp"
        android:layout_height="156dp"
        android:layout_marginTop="92dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtTitulo1"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logopagabus"
        tools:src="@drawable/logopagabus" />

    <TextView
        android:id="@+id/olvidasteContraseña"
        android:layout_width="280dp"
        android:layout_height="25dp"
        android:layout_marginTop="8dp"
        android:text="¿Olvidaste tu contraseña?"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <TextView
    android:id="@+id/txtTitulo1"
    android:layout_width="357dp"
    android:layout_height="82dp"
    android:layout_marginTop="4dp"
    android:text="@string/inicio_de_sesion"
    android:textAlignment="center"
    android:textSize="48sp"
    android:textStyle="bold"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="351dp"
        android:layout_height="464dp"
        android:layout_marginBottom="56dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Correo"
            android:layout_width="294dp"
            android:layout_height="62dp"
            android:layout_marginTop="36dp"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editCorreo"
                android:layout_width="294dp"
                android:layout_height="62dp"
                android:hint="Correo" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnIniciarSesion"
            android:layout_width="285dp"
            android:layout_height="51dp"
            android:backgroundTint="#03A9F4"
            android:onClick="irMenu"
            android:text="@string/iniciar_sesion"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/btnIniciarconGoogle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.439"
            app:layout_constraintStart_toStartOf="parent" />


        <Button
            android:id="@+id/btnIniciarconGoogle"
            android:layout_width="328dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:backgroundTint="#9b9b9b"
            android:drawableLeft="@drawable/googleg_standard_color_18"
            android:paddingLeft="30dp"
            android:text="@string/google"
            android:textAlignment="textStart"
            android:textSize="13dp"
            app:layout_constraintBottom_toTopOf="@+id/btnIniciarconFacebook"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.478"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnIniciarconFacebook"
            android:layout_width="328dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#9b9b9b"
            android:drawableLeft=""
            android:paddingLeft="30dp"
            android:text="@string/facebook"
            android:textAlignment="textStart"
            android:textSize="13dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="292dp" />

        <Button
            android:id="@+id/btnRegistrarse"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_marginBottom="4dp"
            android:backgroundTint="#03A9F4"
            android:onClick="irRegistro"
            android:text="@string/crear_cuenta"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/txtNotTienesCuenta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_tienes_cuanta"
            android:textColor="#4CAF50"
            android:textSize="15dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/btnRegistrarse"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="TextSizeCheck" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Contraseña"
            android:layout_width="294dp"
            android:layout_height="62dp"
            android:layout_marginTop="15dp"
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Correo">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editContraseña"
                android:layout_width="294dp"
                android:layout_height="62dp"
                android:hint="Contraseña" />
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>